# gpuwatch

./: .gitignore  README.md  pyproject.toml
gpuwatch/: __init__.py  __main__.py  app.py  collector.py  config.py  models.py  nvml_probe.py  ssh_executor.py
gpuwatch/ui/: __init__.py  dashboard.py  gpu_bar.py  server_panel.py  server_selector.py
