[project]
name = "gpuwatch"
version = "0.1.0"
description = "Interactive multi-server GPU monitoring TUI"
requires-python = ">=3.10"
dependencies = [
    "textual>=8,<9",
    "pyyaml>=6.0",
]

[project.scripts]
gpuwatch = "gpuwatch.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpuwatch"]
